--- a/compra/templates/agregar_producto.html
+++ b/compra/templates/agregar_producto.html
@@ -7,5 +7,50 @@
 </head>
 <body>
     <h1>Agregar Nuevo Producto</h1>
+<div class="mb-3">
+    <label for="" class="form-label">Nombre</label>
+    <input
+        type="text"
+        name=""
+        id=""
+        class="form-control"
+        placeholder=""
+        aria-describedby="helpId"
+    />
+</div>
+
+<div class="mb-3">
+    <label for="" class="form-label">Precio</label>
+    <input
+        type="text"
+        name=""
+        id=""
+        class="form-control"
+        placeholder=""
+        aria-describedby="helpId"
+    />
+    <div class="mb-3">
+        <label for="" class="form-label">Stock Actual</label>
+        <input
+            type="text"
+            name=""
+            id=""
+            class="form-control"
+            placeholder=""
+            aria-describedby="helpId"
+        />
+    </div>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          Proveedor
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="#">Proveedor 1</a></li>
+            <li><a class="dropdown-item" href="#">Proveedor 2</a></li>
+            <li><a class="dropdown-item" href="#">Proveedor 3</a></li>
+        </ul>
+        </button>
+        
+      </div>    
+</div>
 </body>
 </html>
