--- a/compra/templates/listar_proveedores.html
+++ b/compra/templates/listar_proveedores.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Proveedores</title>
+    <title>StockControl - Listar Proveedores</title>
 </head>
 <body>
-<table>
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>DNI</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for proveedor in proveedores %}
-      <tr>
-        <td>{{ proveedor.nombre }}</td>
-        <td>{{ proveedor.apellido }}</td>
-        <td>{{ proveedor.dni }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>  
+    <h1>Listar Proveedores</h1>
+    
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>DNI</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{ proveedor.nombre }}</td>
+                <td>{{ proveedor.apellido }}</td>
+                <td>{{ proveedor.dni }}</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
