--- a/compra/templates/agregar_proveedor.html
+++ b/compra/templates/agregar_proveedor.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario Proveedores</title>
+    <title>StockControl - Agregar Proveedor</title>
 </head>
-<body>    
-<h1>Agregar Nuevo Proveedor</h1>
+<body>
+    <h1>Agregar Proveedor</h1>
+    
+    <form method="post">
+        <label for="nombre">Nombre:</label><br>
+        <input type="text" id="nombre" name="nombre"><br>
+        <label for="apellido">Apellido:</label><br>
+        <input type="text" id="apellido" name="apellido"><br>
+        <label for="dni">DNI:</label><br>
+        <input type="text" id="dni" name="dni"><br>
+        <input type="submit" value="Agregar">
+    </form>
 </body>
 </html>
