--- a/compra/templates/listar_productos.html
+++ b/compra/templates/listar_productos.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Productos</title>
+    <title>StockControl - Listar Productos</title>
 </head>
 <body>
-<table>
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>Precio</th>
-        <th>Stock</th>
-        <th>Proveedor</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for producto in productos %}
-      <tr>
-        <td>{{ producto.nombre }}</td>
-        <td>{{ producto.precio }}</td>
-        <td>{{ producto.stock }}</td>
-        <td>{{ producto.proveedor.nombre }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  </body>
+    <h1>Listar Productos</h1>
+    
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Precio</th>
+                <th>Stock</th>
+                <th>Proveedor</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{ producto.nombre }}</td>
+                <td>{{ producto.precio }}</td>
+                <td>{{ producto.stock }}</td>
+                <td>{{ producto.proveedor }}</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
 </html>
