--- a/compra/templates/agregar_proveedor.html
+++ b/compra/templates/agregar_proveedor.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>Agregar Proveedor</h1>
-    
     <form method="post">
+        {% csrf_token %}
         <label for="nombre">Nombre:</label><br>
         <input type="text" id="nombre" name="nombre"><br>
         <label for="apellido">Apellido:</label><br>
