--- a/compra/templates/agregar_producto.html
+++ b/compra/templates/agregar_producto.html
@@ -8,20 +8,32 @@
     <h1>Agregar Producto</h1>
     
     <form method="post">
+        {% csrf_token %}
         <label for="nombre">Nombre:</label><br>
         <input type="text" id="nombre" name="nombre"><br>
         <label for="precio">Precio:</label><br>
-        <input type="number" id="precio" name="precio" step="0.01"><br>
+        <input type="number" id="precio" name="precio"><br>
         <label for="stock">Stock:</label><br>
         <input type="number" id="stock" name="stock"><br>
         <label for="proveedor">Proveedor:</label><br>
-        {% csrf_token %}
-        <select id="proveedor" name="proveedor">
-            {% for proveedor in proveedores %}
-                <option value= 'proveedor.nombre' ></option>
-            {% endfor %}
-        </select><br>
-        <input type="submit" value="Agregar">
+        <div class="list-group">
+            <ul><label class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" />
+                Martin Gomez
+            </label></ul>
+            <ul><label class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" />
+                Lucas Peralta
+            </label></ul>
+            <ul><label class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" />
+                Sara Lopez
+            </label></ul>
+            <ul><label class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" />
+                Maria Martinez</ul>
+        </div>
+        <input type="submit" value="Agregar Producto">
     </form>
 </body>
 </html>
