--- a/compra/templates/agregar_producto.html
+++ b/compra/templates/agregar_producto.html
@@ -17,21 +17,12 @@
         <input type="number" id="stock" name="stock"><br>
         <label for="proveedor">Proveedor:</label><br>
         <div class="list-group">
-            <ul><label class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" />
-                Martin Gomez
-            </label></ul>
-            <ul><label class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" />
-                Lucas Peralta
-            </label></ul>
-            <ul><label class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" />
-                Sara Lopez
-            </label></ul>
-            <ul><label class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" />
-                Maria Martinez</ul>
+            <select id="proveedor" name="proveedor">
+                <option value="Martin Gomez">Martin Gomez</option>
+                <option value="Lucas Peralta">Lucas Peralta</option>
+                <option value="Sara Lopez">Sara Lopez</option>
+                <option value="Maria Martinez">Maria Martinez</option>
+            </select><br>
         </div>
         <input type="submit" value="Agregar Producto">
     </form>
