--- a/compra/templates/agregar_producto.html
+++ b/compra/templates/agregar_producto.html
@@ -18,10 +18,9 @@
         <label for="proveedor">Proveedor:</label><br>
         <div class="list-group">
             <select id="proveedor" name="proveedor">
-                <option value="Martin Gomez">Martin Gomez</option>
-                <option value="Lucas Peralta">Lucas Peralta</option>
-                <option value="Sara Lopez">Sara Lopez</option>
-                <option value="Maria Martinez">Maria Martinez</option>
+                {% for proveedor in proveedores %}
+                    <option value="{{ proveedor.id }}">{{ proveedor.nombre }}</option>
+                {% endfor %}
             </select><br>
         </div>
         <input type="submit" value="Agregar Producto">
